--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+    <h1>☁️ Weather App</h1>
+
     <header class="container">
         <section class="weather">
             <section class="weather-temp">
